--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,97 @@
 }
 
 body {
-  background-color: rosybrown;
+  background-color: #fff5eb;
+}
+
+header {
+  background-color: #26547d;
+  display: flex;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
 }
 
 #page-title {
   color: blanchedalmond;
   font-size: 62px;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 section {
-  margin: 25px 0;
+  margin-bottom: 25px;
+  margin-top: -1px;
+}
+
+.top-ranks {
+  background-color: #26547d;
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 0  0 65px 65px;
+  margin-bottom: 12px;
+}
+
+.position {
+    font-size: 20px;
+    color: aliceblue;
+    width: 50px;
+    background-color: cornflowerblue;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.pos-not-first {
+  margin-bottom: 10px;
+}
+
+.top-ranks-person {
+  width: 150px;
+  height: 180px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15%;
+  background-color: #ffce5c;
+  backdrop-filter: blur(10px);
+}
+
+.fa-user-alt {
+  color: aliceblue;
+}
+
+.rank-first {
+  width: 190px;
+  height: 230px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15%;
+  background-color: #ef436b;
+}
+
+.fa-crown {
+  color: gold;
+  transform: rotate(340deg);
+}
+
+.fa-crown::before {
+  margin-right: 35px;
+}
+
+.name {
+  font-size: 24px;
+  color: whitesmoke;
+}
+
+.score {
+  font-size: 24px;
+  color: whitesmoke;
 }
 
 .score-section {
