--- a/src/index.css
+++ b/src/index.css
@@ -88,14 +88,10 @@ section {
   margin-right: 35px;
 }
 
-.name {
+.name, .score {
   font-size: 24px;
-  color: whitesmoke;
-}
-
-.score {
-  font-size: 24px;
-  color: whitesmoke;
+  color: #26547d;
+  font-weight: 900;
 }
 
 .score-section {
@@ -139,6 +135,7 @@ section {
   justify-content: center;
   align-items: center;
   margin: 20px auto;
+  box-shadow: 10px 10px 5px rgb(212, 165, 93);
 } 
 
 button {
@@ -157,15 +154,19 @@ button:hover {
 
 .form-title {
   font-size: 24px;
-  /* margin-top: 50px; */
 }
 
 .name-score {
   width: 200px;
   height: 30px;
   margin-top: 10px;
-  border: 1px solid black;
+  border: 3px solid #26547d;
+  border-radius: 5px;
   text-indent: 5px;
+}
+
+.name-score:focus {
+  background-color: antiquewhite;
 }
 
 #submit {
